@@ -1,3 +1,5 @@
+- Default TLS mode now accepts TLS v1.2, v1.1 and v1.0.
+
 1.3.2 - 2014xxxx
 ================
 
